refactor: improve API proxy and CORS security
Update CORS configuration to restrict allowed origins and include necessary headers. Standardize API endpoint resolution across the frontend and proxy configurations to improve network request reliability.